[package]
edition = "2021"
name = "telegame"
version = "0.1.0"

[dependencies]
glam.features = ["serde"]
glam.version = "0.22.0"
mime_guess.version = "2"
open = "3"
serde.features = ["derive"]
serde.version = "1"
serde_json.version = "1"
sha1 = "0.10.5"
websocket.default-features = false
websocket.features = ["sync"]
websocket.version = "0.26.5"
